# torch-exp

./: .dockerignore  .gitignore  Dockerfile.cpu  Dockerfile.gpu  pyproject.toml
dev/: test_venv.sh
src/: main.py
